# script-exporter-operator

./: README.md  SECURITY.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: issues.yaml  promote.yaml  release.yaml
scripts/: script1.sh
scripts/subdir/: script2.sh
src/: charm.py
tests/integration/: config_file.yaml  config_multiple.yaml  prometheus_config_file.yaml  prometheus_config_multiple.yaml  script.sh  test_multiple_scripts.py  test_script_exporter.py  test_simple_script.py
tests/integration/scripts/subdir/: script2.sh
tests/scenario/: test_charm.py
tests/unit/: conftest.py  test_charm.py
