# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "script-exporter"
version = "0.0"
requires-python = "~=3.8"

dependencies = [
  "ops",
  "cosl",
  "pydantic<2",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "coverage[toml]",
  "ops[testing]",
  # Integration
  "juju",
  "pytest-operator",
  "aiohttp",
  "asyncstdlib",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src/**.py"]
extraPaths = ["src", "lib"]
pythonVersion = "3.8"
pythonPlatform = "All"

[tool.codespell]
skip = ".git,.tox,build,venv*"
ignore-words-list = "assertIn"
